--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tetrisx",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "http://react_tetris.github.io/tetris",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -31,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
